cmake_minimum_required(VERSION 3.0)

add_executable(ex01_multiply_two_numbers ex01_multiply_two_numbers.c)
target_link_libraries(ex01_multiply_two_numbers common_lib)
set_target_properties(ex01_multiply_two_numbers PROPERTIES FOLDER "exercices")

add_executable(ex02_exchange_two_numbers ex02_exchange_two_numbers.c)
target_link_libraries(ex02_exchange_two_numbers common_lib)
set_target_properties(ex02_exchange_two_numbers PROPERTIES FOLDER "exercices")

add_executable(ex03_convert_letter_hexadecimal ex03_convert_letter_hexadecimal.c)
target_link_libraries(ex03_convert_letter_hexadecimal common_lib)
set_target_properties(ex03_convert_letter_hexadecimal PROPERTIES FOLDER "exercices")

add_executable(ex04_find_even_number ex04_find_even_number.c)
target_link_libraries(ex04_find_even_number common_lib)
set_target_properties(ex04_find_even_number PROPERTIES FOLDER "exercices")

add_executable(ex05_find_largest_number ex05_find_largest_number.c)
target_link_libraries(ex05_find_largest_number common_lib)
set_target_properties(ex05_find_largest_number PROPERTIES FOLDER "exercices")

add_executable(ex06_find_bigger_number ex06_find_bigger_number.c)
target_link_libraries(ex06_find_bigger_number common_lib)
set_target_properties(ex06_find_bigger_number PROPERTIES FOLDER "exercices")

add_executable(ex07_loop_while ex07_loop_while.c)
target_link_libraries(ex07_loop_while common_lib)
set_target_properties(ex07_loop_while PROPERTIES FOLDER "exercices")

add_executable(ex08_loop_while ex08_loop_while.c)
target_link_libraries(ex08_loop_while common_lib)
set_target_properties(ex08_loop_while PROPERTIES FOLDER "exercices")

add_executable(ex09_loop_for ex09_loop_for.c)
target_link_libraries(ex09_loop_for common_lib)
set_target_properties(ex09_loop_for PROPERTIES FOLDER "exercices")

add_executable(ex10_pointers ex10_pointers.c)
target_link_libraries(ex10_pointers common_lib)
set_target_properties(ex10_pointers PROPERTIES FOLDER "exercices")

add_executable(ex11_loop_for ex11_loop_for.c)
target_link_libraries(ex11_loop_for common_lib)
set_target_properties(ex11_loop_for PROPERTIES FOLDER "exercices")

add_executable(ex15_malloc ex15_malloc.c)
target_link_libraries(ex15_malloc common_lib)
set_target_properties(ex15_malloc PROPERTIES FOLDER "exercices")

add_executable(ex16_mirror_two_words ex16_mirror_two_words.c)
target_link_libraries(ex16_mirror_two_words common_lib)
set_target_properties(ex16_mirror_two_words PROPERTIES FOLDER "exercices")

add_executable(ex17_quickSort_array ex17_quickSort_array.c)
target_link_libraries(ex17_quickSort_array common_lib)
set_target_properties(ex17_quickSort_array PROPERTIES FOLDER "exercices")

add_executable(ex18_fusion_sort ex18_fusion_sort.c)
target_link_libraries(ex18_fusion_sort common_lib)
set_target_properties(ex18_fusion_sort PROPERTIES FOLDER "exercices")

add_executable(ex19_malloc_array_2D ex19_malloc_array_2D.c)
target_link_libraries(ex19_malloc_array_2D common_lib)
set_target_properties(ex19_malloc_array_2D PROPERTIES FOLDER "exercices")

add_executable(ex21_general_review ex21_general_review.c)
target_link_libraries(ex21_general_review common_lib)
set_target_properties(ex21_general_review PROPERTIES FOLDER "exercices")

add_executable(ex22_files_handling ex22_files_handling.c)
target_link_libraries(ex22_files_handling common_lib)
set_target_properties(ex22_files_handling PROPERTIES FOLDER "exercices")

add_executable(ex23_files_handling ex23_files_handling.c)
target_link_libraries(ex23_files_handling common_lib)
set_target_properties(ex23_files_handling PROPERTIES FOLDER "exercices")

add_executable(ex24_files_sorting ex24_files_sorting.c)
target_link_libraries(ex24_files_sorting common_lib)
set_target_properties(ex24_files_sorting PROPERTIES FOLDER "exercices")

add_executable(ex101_array ex101_array.c)
target_link_libraries(ex101_array common_lib)
set_target_properties(ex101_array PROPERTIES FOLDER "exercices")

add_executable(ex102_graphics ex102_graphics.c)
target_link_libraries(ex102_graphics common_lib)
set_target_properties(ex102_graphics PROPERTIES FOLDER "exercices")

add_executable(ex103_files ex103_files.c)
target_link_libraries(ex103_files common_lib)
set_target_properties(ex103_files PROPERTIES FOLDER "exercices")

add_executable(ex104_algo ex104_algo.c)
target_link_libraries(ex104_algo common_lib)
set_target_properties(ex104_algo PROPERTIES FOLDER "exercices")

